--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -13,7 +13,7 @@ html, body {
   min-height: 100vh;
   width: 100%;
   position: relative;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/background-login.png');
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/fondo2.png');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
